# avx_mathfun

./: CMakeLists.txt  README.md  avx_mathfun.h  main.cpp
